<resources>
	<string name="app_name">Note Vault</string>
	<string name="copyright">Copyright &amp;copy; 2015-2026 Aaron Barany</string>

	<string name="action_refresh">Refresh</string>
	<string name="action_help">Help</string>
	<string name="action_password_generator">Generate Password</string>

	<string name="button_add">Add</string>
	<string name="button_save">Save</string>
	<string name="button_dont_save">Don\'t save</string>
	<string name="button_close">Close</string>
	<string name="button_remove">Delete</string>
	<string name="button_open">Open</string>
	<string name="button_rename">Rename</string>
	<string name="button_change">Change</string>
	<string name="button_ok">OK</string>
	<string name="button_cancel">Cancel</string>
	<string name="button_generate">Generate</string>
	<string name="button_copy">Copy</string>

	<string name="title_note_lists">Note Lists</string>
	<string name="title_help_screen">About Note Vault</string>

	<string name="label_name">Name</string>
	<string name="label_password">Password</string>
	<string name="label_current_password">Current password</string>
	<string name="label_new_password">New password</string>
	<string name="label_password_confirm">Confirm password</string>
	<string name="label_open">Open %s</string>
	<string name="label_change_password">Change password for %s</string>
	<string name="label_confirm_remove">Do you wish to delete %s?</string>
	<string name="label_num_characters"># characters: </string>

	<string name="default_num_characters">12</string>

	<string name="error_empty_name">Please enter a name.</string>
	<string name="error_same_name">Item of name %s already exists.</string>
	<string name="error_create">Error creating %s.</string>
	<string name="error_load">Error loading %s.</string>
	<string name="error_save">Error saving %s.</string>
	<string name="error_empty_password">Please enter a password.</string>
	<string name="error_password_mismatch">Passwords don\'t match.</string>
	<string name="error_bad_password">Incorrect password.</string>
	<string name="error_remove">Error deleting %s.</string>
	<string name="error_inaccessible">Can\'t access storage.</string>

	<string name="message_close_changed">Do you wish to save changes before closing?</string>
	<string name="message_loading">Loading…</string>

	<string name="menu_item_open">Open</string>
	<string name="menu_item_rename">Rename</string>
	<string name="menu_item_change_password">Change Password</string>
	<string name="menu_item_remove">Delete</string>

	<string name="help_about">Securely store notes without relying on an online service.</string>
	<string name="help_transfer" formatted="false">
		Transfer notes between devices by plugging your phone or tablet into a computer and
		browsing to
		&lt;br&gt;&lt;br&gt;&lt;tt&gt;
		%f
		&lt;/tt&gt;&lt;br&gt;&lt;br&gt;
		From there, you can move %ext files to and from this device.
		&lt;br&gt;&lt;br&gt;
		Due to an issue with Android, some files may not show up on your computer. If this happens,
		reboot your device.
	</string>
	<string name="help_tips_title">Tips</string>
	<string name="help_tips">
		&lt;ul&gt;
			&lt;li&gt;Press and hold on items for options such as renaming and deleting.&lt;/li&gt;
			&lt;li&gt;&lt;b&gt;Be sure to close your notes before exiting.&lt;/b&gt;
				When you press the home button, the notes will stay open to allow you to copy/paste
				between other apps.&lt;/li&gt;
			&lt;li&gt;When editing a note, use the password generator to create a random password.&lt;/li&gt;
		&lt;/ul&gt;
	</string>

	<string name="hint_message">Message to save in the note</string>
	<string name="hint_generate_password">Tap Generate for password</string>

    <string name="title_activity_note_list">NoteList</string>
    <string name="title_activity_note">NoteActivity</string>

</resources>
