<RelativeLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:paddingLeft="@dimen/activity_horizontal_margin"
	android:paddingRight="@dimen/activity_horizontal_margin"
	android:paddingTop="@dimen/activity_vertical_margin"
	android:paddingBottom="@dimen/activity_vertical_margin"
	android:id="@+id/activityNote"
	tools:context="com.akb.notevault.NoteActivity"
	>

	<EditText
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:id="@+id/message"
		android:layout_alignParentTop="true"
		android:layout_alignParentStart="true"
		android:layout_alignParentEnd="true"
		android:layout_above="@+id/saveButton"
		android:inputType="textMultiLine|textCapSentences"
		android:gravity="top"
		android:hint="@string/hint_message"
		android:importantForAutofill="no"
		/>

	<Button
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/button_save"
		android:id="@+id/saveButton"
		android:layout_alignParentBottom="true"
		android:layout_alignParentStart="true"
		/>

	<Button
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/button_cancel"
		android:id="@+id/cancelButton"
		android:layout_alignParentBottom="true"
		android:layout_alignParentEnd="true"
		/>
</RelativeLayout>
