<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
				xmlns:tools="http://schemas.android.com/tools"
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:paddingLeft="@dimen/activity_horizontal_margin"
				android:paddingRight="@dimen/activity_horizontal_margin"
				android:paddingTop="@dimen/activity_vertical_margin"
				android:paddingBottom="@dimen/activity_vertical_margin"
				tools:context=".NoteVault">

	<ListView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_above="@+id/openButton"
		android:id="@+id/noteList"
		android:layout_alignParentLeft="true"
		android:layout_alignParentStart="true"
		android:choiceMode="singleChoice"
		android:layout_alignParentRight="true"
		android:longClickable="true"
		android:layout_alignParentTop="true"/>

	<Button
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/button_open"
		android:id="@+id/openButton"
		android:layout_alignParentBottom="true"
		android:layout_alignParentRight="true"
		android:enabled="false"/>

	<Button
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/button_add"
		android:id="@+id/addButton"
		android:layout_alignParentBottom="true"
		android:layout_below="@+id/noteList"
		android:layout_alignParentLeft="true"/>

	<Button
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/button_remove"
		android:id="@+id/removeButton"
		android:layout_alignParentBottom="true"
		android:layout_below="@+id/noteList"
		android:layout_toRightOf="@+id/addButton"
		android:enabled="false"/>
</RelativeLayout>
